chore: snapshot phase 1 development
